fixed some obvious bugs and inefficiencies